# tslumd

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  renovate.json  requirements-dev.txt  setup.cfg
.github/workflows/: codspeed.yml  python-package.yml  wheel-test.yml
doc/: requirements.txt
doc/source/: conf.py  conftest.py  index.rst  overview.rst  protocol.rst  receiver.rst  sender.rst
doc/source/_static/css/: custom.css
doc/source/ext/: builtinproperty.py  eventobj.py  propertyobj.py
doc/source/reference/: common.rst  index.rst  messages.rst  receiver.rst  sender.rst  tallyobj.rst
examples/: animated_sender.py
src/tslumd/: __init__.py  animated_sender.py  common.py  messages.py  receiver.py  sender.py  tallyobj.py  utils.py
tests/: conftest.py  test_messages.py  test_receiver.py  test_sender.py  test_tallyobj.py
tests/data/: uhs500-message.umd  uhs500-tally.json
