[bdist_wheel]
universal = False

[metadata]
name = tslumd
version = 0.0.5
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/tslumd
description = Client and Server for TSLUMD Tally Protocols
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
platforms = any
python_requires = >=3.7
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Framework :: AsyncIO
    Topic :: Multimedia :: Video
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
package_dir=
    =src
packages = find:
install_requires =
    python-dispatch


[options.packages.find]
where = src
exclude = tests


[options.package_data]
* = LICENSE, README*

[tool:pytest]
testpaths = tests src doc
addopts = --doctest-modules --doctest-glob="*.rst"
doctest_plus = enabled
timeout = 300
